Removed jooq, based on new provysdb, added github actions for on push verification and release
